{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 44,
  "lineage": "af9e9e7d-0e8e-0137-c506-be1fc04d3fed",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-public",
      "provider": "module.instances.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be3f0371736d5394",
            "arn": "arn:aws:ec2:us-east-1:743858840836:instance/i-0ba4c846e46e75bf6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba4c846e46e75bf6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_access",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c62b31672c5c5f6b",
            "private_dns": "ip-10-0-1-220.ec2.internal",
            "private_ip": "10.0.1.220",
            "public_ip": "54.237.111.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07e44aaffc161526c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051602cc8ed7ef0d4",
            "tags": {
              "Name": "EC2 PUB - Python"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc15c4f4562b1d53"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.key_access",
            "module.instances.aws_security_group.public_sg",
            "module.instances.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "module.instances.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743858840836:security-group/sg-0dc15c4f4562b1d53",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc15c4f4562b1d53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public SG",
            "name_prefix": "",
            "owner_id": "743858840836",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-068315f5630bd55aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0596bb9139a0445de",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-44-151-172.compute-1.amazonaws.com",
            "public_ip": "52.44.151.172",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743858840836:internet-gateway/igw-024febf3e2f7111c3",
            "id": "igw-024febf3e2f7111c3",
            "owner_id": "743858840836",
            "tags": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-068315f5630bd55aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e6c12435892bc553",
            "owner_id": "743858840836",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024febf3e2f7111c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-068315f5630bd55aa"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public_association",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05647bd38f7783894",
            "route_table_id": "rtb-0e6c12435892bc553",
            "subnet_id": "subnet-051602cc8ed7ef0d4"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_route_table.route_table_public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743858840836:subnet/subnet-051602cc8ed7ef0d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-051602cc8ed7ef0d4",
            "map_public_ip_on_launch": false,
            "owner_id": "743858840836",
            "tags": {
              "Name": "Python PUB Sub"
            },
            "vpc_id": "vpc-068315f5630bd55aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743858840836:vpc/vpc-068315f5630bd55aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0904d074164095eee",
            "default_route_table_id": "rtb-0d30ce82c6e96e639",
            "default_security_group_id": "sg-0002d81c014056e9e",
            "dhcp_options_id": "dopt-971b73ed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-068315f5630bd55aa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d30ce82c6e96e639",
            "owner_id": "743858840836",
            "tags": {
              "Name": "Python - Pipeline - VPC"
            }
          }
        }
      ]
    }
  ]
}